--- a/hero-lol/css/login.css
+++ b/hero-lol/css/login.css
@@ -2,6 +2,7 @@ body{
     padding: 0;
     margin: 0;
     font-size: 0.3rem;
+    color: #2a2a2a;
 }
 .login{
     width: 100%;
@@ -43,10 +44,18 @@ body{
     color: #b59758;
     outline: none;
 }
+.login-form span{
+    color: red;
+}
 .register-info{
     margin-top: 0.5rem;
     font-size: 0.25rem;
 }
 .register-info a{
     color: #b59758;
+}
+#resgister-user-tips{
+    display: block;
+    margin: 0.2rem 0 0.5rem 0;
+    color: red;
 }
