--- a/hero-lol/css/personal.css
+++ b/hero-lol/css/personal.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     font-size: 0.25rem;
     background-color: #f1f1f1;
+    color: #2a2a2a;
 }
 .top-logo{
     background-color: white;
@@ -149,7 +150,7 @@ body{
 .record-list ul li{
     display: inline-block;
     width: 70%;
-    background-color: #f2f2f2;
+    background-color: #ebebeb;
 }
 .record-list ul li img{
     width: 33%;
@@ -158,6 +159,7 @@ body{
 }
 .hero-li-active{
     background-color: #ffffff !important;
+    color: #0f0f0f;
 }
 .record-list-detail{
     width: 100%;
